navbar sorted, got the google image sorted along with the input of the webpage, styled all of those named above

--- a/client/index.html
+++ b/client/index.html
@@ -8,5 +8,66 @@
     <script defer src="script.js"></script>
     <title>Google</title>
   </head>
-  <body></body>
+  <body>
+    <div class="navbar-left">
+      <a
+        class="about"
+        href="https://about.google/?fg=1&utm_source=google-GB&utm_medium=referral&utm_campaign=hp-header"
+        >About</a
+      >
+      <a
+        class="store"
+        href="https://store.google.com/GB?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-GB&pli=1"
+        >Store</a
+      >
+      <div class="navbar-right">
+        <a href="https://mail.google.com/mail/" class="gmail">Gmail</a>
+
+        <a href="https://www.google.co.uk/imghp?hl=en&authuser" class="images"
+          >Images</a
+        >
+      </div>
+    </div>
+
+    <div class="logo">
+      <img
+        src="/pair-challenge-lap1/client/images/googlelogo_color_272x92dp.png"
+        alt="Google logo"
+      />
+    </div>
+
+    <div id="form">
+      <div class="form">
+        <form action="/search" method="GET" role="search">
+          <input type="text" name="searchBar" /><br />
+          <div class="buttons">
+            <button type="submit">Google Search</button>
+            <button type="submit">I'm Feeling Lucky</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div>United Kingdom</div>
+
+      <div class="firstFoot">
+        <ul>
+          <li>Advertising</li>
+          <li>Business</li>
+          <li>How Search Works</li>
+        </ul>
+      </div>
+
+      <div class="secondFoot">Carbon neutral since 2007</div>
+
+      <div class="thirdFoot">
+        <ul>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>Settings</li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
