fixed the buttons to search, both are styled similar to googles one and added some empty space in a div below it

--- a/client/index.html
+++ b/client/index.html
@@ -39,7 +39,7 @@
     <div id="form">
       <div class="form">
         <form action="/search" method="GET" role="search">
-          <input type="text" name="searchBar" /><br />
+          <input type="text" name="searchBar" />
           <div class="buttons">
             <button type="submit">Google Search</button>
             <button type="submit">I'm Feeling Lucky</button>
@@ -48,10 +48,12 @@
       </div>
     </div>
 
+    <div class="empty-space"></div>
+
     <div class="footer">
       <div>United Kingdom</div>
 
-      <div class="firstFoot">
+      <div class="first-foot">
         <ul>
           <li>Advertising</li>
           <li>Business</li>
@@ -59,9 +61,9 @@
         </ul>
       </div>
 
-      <div class="secondFoot">Carbon neutral since 2007</div>
+      <div class="second-foot">Carbon neutral since 2007</div>
 
-      <div class="thirdFoot">
+      <div class="third-foot">
         <ul>
           <li>Privacy</li>
           <li>Terms</li>
