undone navbar, but fixed the footer with styling webpage is now 90% complete

--- a/client/index.html
+++ b/client/index.html
@@ -9,23 +9,25 @@
     <title>Google</title>
   </head>
   <body>
-    <div class="navbar-left">
-      <a
-        class="about"
-        href="https://about.google/?fg=1&utm_source=google-GB&utm_medium=referral&utm_campaign=hp-header"
-        >About</a
-      >
-      <a
-        class="store"
-        href="https://store.google.com/GB?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-GB&pli=1"
-        >Store</a
-      >
-      <div class="navbar-right">
-        <a href="https://mail.google.com/mail/" class="gmail">Gmail</a>
-
-        <a href="https://www.google.co.uk/imghp?hl=en&authuser" class="images"
-          >Images</a
+    <div class="whole-nav">
+      <div class="navbar-left">
+        <a
+          class="about"
+          href="https://about.google/?fg=1&utm_source=google-GB&utm_medium=referral&utm_campaign=hp-header"
+          >About</a
         >
+        <a
+          class="store"
+          href="https://store.google.com/GB?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-GB&pli=1"
+          >Store</a
+        >
+        <div class="navbar-right">
+          <a href="https://mail.google.com/mail/" class="gmail">Gmail</a>
+
+          <a href="https://www.google.co.uk/imghp?hl=en&authuser" class="images"
+            >Images</a
+          >
+        </div>
       </div>
     </div>
 
@@ -51,24 +53,26 @@
     <div class="empty-space"></div>
 
     <div class="footer">
-      <div>United Kingdom</div>
+      <div class="uk">United Kingdom</div>
 
-      <div class="first-foot">
-        <ul>
-          <li>Advertising</li>
-          <li>Business</li>
-          <li>How Search Works</li>
-        </ul>
-      </div>
+      <div class="secondline-footer">
+        <div class="first-foot">
+          <ul>
+            <li>Advertising</li>
+            <li>Business</li>
+            <li>How Search works</li>
+          </ul>
+        </div>
 
-      <div class="second-foot">Carbon neutral since 2007</div>
+        <div class="second-foot">🍃 Carbon neutral since 2007</div>
 
-      <div class="third-foot">
-        <ul>
-          <li>Privacy</li>
-          <li>Terms</li>
-          <li>Settings</li>
-        </ul>
+        <div class="third-foot">
+          <ul>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>Settings</li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
