--- a/client/index.html
+++ b/client/index.html
@@ -43,8 +43,8 @@
         <form action="/search" method="GET" role="search">
           <input type="text" name="searchBar" />
           <div class="buttons">
-            <button type="submit">Google Search</button>
-            <button type="submit">I'm Feeling Lucky</button>
+            <button id="search" type="submit">Google Search</button>
+            <button id="random" type="submit">I'm Feeling Lucky</button>
           </div>
         </form>
       </div>
@@ -58,19 +58,47 @@
       <div class="secondline-footer">
         <div class="first-foot">
           <ul>
-            <li>Advertising</li>
-            <li>Business</li>
-            <li>How Search works</li>
+            <li>
+              <a
+                href="https://ads.google.com/intl/en_uk/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"
+                >Advertising</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://smallbusiness.withgoogle.com/intl/en_uk/?subid=uk-en-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=uk-en_GB-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/"
+              >
+                Business</a
+              >
+            </li>
+            <li>
+              <a href="https://www.google.com/search/howsearchworks/?fg=1"
+                >How Search works</a
+              >
+            </li>
           </ul>
         </div>
 
-        <div class="second-foot">🍃 Carbon neutral since 2007</div>
+        <div class="second-foot">
+          <a
+            href="https://sustainability.google/intl/en-GB/carbon-free/?utm_source=googlehpfooter&utm_medium=housepromos&utm_campaign=bottom-footer&utm_content=#home"
+            >🍃 Carbon neutral since 2007</a
+          >
+        </div>
 
         <div class="third-foot">
           <ul>
-            <li>Privacy</li>
-            <li>Terms</li>
-            <li>Settings</li>
+            <li>
+              <a href="https://policies.google.com/privacy?hl=en-GB&fg=1"
+                >Privacy</a
+              >
+            </li>
+            <li>
+              <a href="https://policies.google.com/terms?hl=en-GB&fg=1"
+                >Terms</a
+              >
+            </li>
+            <li><a href="#">Settings</a></li>
           </ul>
         </div>
       </div>
