--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/aa6a3be991.js"
+      crossorigin="anonymous"
+    ></script>
     <script defer src="script.js"></script>
+
     <title>Google</title>
   </head>
   <body>
@@ -28,6 +33,7 @@
         <a href="https://www.google.co.uk/imghp?hl=en&authuser" class="images"
           >Images</a
         >
+        <i class="fa-solid fa-grid"></i>
       </div>
     </div>
 
