--- a/client/index.html
+++ b/client/index.html
@@ -39,15 +39,15 @@
 
     <div class="logo">
       <img
-        src="/pair-challenge-lap1/client/images/googlelogo_color_272x92dp.png"
+        src="./images/googlelogo_color_272x92dp.png"
         alt="Google logo"
       />
     </div>
 
     <div id="form">
       <div class="form">
-        <form action="/search" method="GET" role="search">
-          <input type="text" name="searchBar" />
+        <form name="form" method="GET" role="search">
+          <input type="text" id="searchBar" />
           <div class="buttons">
             <button id="search" type="submit">Google Search</button>
             <button id="random" type="submit">I'm Feeling Lucky</button>
